[gd_scene load_steps=47 format=3 uid="uid://b1axqsnun14wh"]

[ext_resource type="Script" path="res://scripts/gui/menu_screen.gd" id="1_8uhpk"]
[ext_resource type="Texture2D" uid="uid://bdbnwg0tolmwk" path="res://art/wallpapers/possible_5.png" id="2_2ah1d"]
[ext_resource type="Texture2D" uid="uid://85rng3qkqovf" path="res://art/Tilesets/ground tiles/new tiles/Tall Grass hill tiles v.2.png" id="2_4vsrg"]
[ext_resource type="FontFile" uid="uid://xkwoks88wexv" path="res://art/resources/Funhouse.ttf" id="2_wkp5o"]
[ext_resource type="Texture2D" uid="uid://cpeuasby2i4rp" path="res://art/cat_UI/Sprite sheets/Setting menu.png" id="3_2s6di"]
[ext_resource type="Texture2D" uid="uid://db3etw17dmg1i" path="res://art/Objects/Basic Grass Biom things 1.png" id="3_4g1ic"]
[ext_resource type="Texture2D" uid="uid://d2ov37m16f7d7" path="res://art/Tilesets/ground tiles/old tiles/Tilled Dirt.png" id="3_tigbe"]
[ext_resource type="Theme" uid="uid://dqhensnempemr" path="res://scenes/gui/themes/cat_button1.tres" id="4_2ene7"]
[ext_resource type="Texture2D" uid="uid://cq4mdql74tki1" path="res://art/Objects/Basic Furniture.png" id="5_kpam4"]
[ext_resource type="Texture2D" uid="uid://biejcofdx0ija" path="res://art/cat_UI/Sprite sheets/Dialouge UI/Emotes/Teemo Basic emote animations sprite sheet.png" id="6_kthpv"]
[ext_resource type="Texture2D" uid="uid://c2jwwtsxq215e" path="res://art/Objects/Basic Plants.png" id="6_orkwk"]
[ext_resource type="Theme" uid="uid://bxma1r6bkrrah" path="res://scenes/gui/themes/cat_button2.tres" id="12_xayvp"]
[ext_resource type="FontFile" uid="uid://cn7qvq8xj8uy5" path="res://art/resources/Roboto-Bold.ttf" id="14_8kubc"]
[ext_resource type="AudioStream" uid="uid://dareoapfyjy26" path="res://songs/01 Title.mp3" id="14_gge73"]
[ext_resource type="Theme" uid="uid://mn1vvllcw7qx" path="res://scenes/gui/themes/settings_button.tres" id="14_mbv1l"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qqv52"]
texture = ExtResource("2_4vsrg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o3r0v"]
texture = ExtResource("3_tigbe")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_x2o0w"]
sources/0 = SubResource("TileSetAtlasSource_qqv52")
sources/1 = SubResource("TileSetAtlasSource_o3r0v")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_awqdp"]
texture = ExtResource("2_4vsrg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_egyv1"]
texture = ExtResource("3_4g1ic")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xqd3t"]
texture = ExtResource("5_kpam4")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l7rm1"]
texture = ExtResource("3_tigbe")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wyso8"]
texture = ExtResource("6_orkwk")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0

[sub_resource type="TileSet" id="TileSet_5bsq7"]
sources/0 = SubResource("TileSetAtlasSource_awqdp")
sources/1 = SubResource("TileSetAtlasSource_egyv1")
sources/2 = SubResource("TileSetAtlasSource_xqd3t")
sources/3 = SubResource("TileSetAtlasSource_l7rm1")
sources/4 = SubResource("TileSetAtlasSource_wyso8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0wda0"]
texture = ExtResource("3_2s6di")
texture_margin_left = 4.90691
texture_margin_top = 5.25741
texture_margin_right = 3.15444
texture_margin_bottom = 5.25741
region_rect = Rect2(139, 12, 106, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdhtm"]
atlas = ExtResource("6_kthpv")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyeay"]
atlas = ExtResource("6_kthpv")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxy75"]
atlas = ExtResource("6_kthpv")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvkdx"]
atlas = ExtResource("6_kthpv")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dph2f"]
atlas = ExtResource("6_kthpv")
region = Rect2(128, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_113h8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdhtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyeay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxy75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvkdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dph2f")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_68o7i"]
atlas = ExtResource("6_kthpv")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew04g"]
atlas = ExtResource("6_kthpv")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eluri"]
atlas = ExtResource("6_kthpv")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q3hy"]
atlas = ExtResource("6_kthpv")
region = Rect2(32, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pjmpf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68o7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew04g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eluri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q3hy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_slwef"]
atlas = ExtResource("6_kthpv")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3vwf"]
atlas = ExtResource("6_kthpv")
region = Rect2(32, 256, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_q8rf0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_slwef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3vwf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3lo5p"]
atlas = ExtResource("6_kthpv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqgah"]
atlas = ExtResource("6_kthpv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntb1p"]
atlas = ExtResource("6_kthpv")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiewa"]
atlas = ExtResource("6_kthpv")
region = Rect2(0, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj7ha"]
atlas = ExtResource("6_kthpv")
region = Rect2(32, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8jnc"]
atlas = ExtResource("6_kthpv")
region = Rect2(0, 448, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u083v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lo5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqgah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntb1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiewa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj7ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8jnc")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8uhpk")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_x2o0w")
format = 2
layer_0/tile_data = PackedInt32Array(524289, 65536, 1, 524290, 65536, 1, 524291, 65536, 1, 524292, 65536, 1, 524293, 65536, 1, 524294, 65536, 1, 524295, 65536, 1, 524296, 65536, 1, 524297, 65536, 1, 524298, 65536, 1, 524299, 65536, 1, 524300, 65536, 1, 589836, 65536, 1, 589835, 65536, 1, 589834, 65536, 1, 589833, 65536, 1, 589832, 65536, 1, 589831, 65536, 1, 589830, 65536, 1, 589829, 65536, 1, 589828, 65536, 1, 589827, 65536, 1, 589826, 65536, 1, 589825, 65536, 1, 589824, 65536, 1, 458764, 65536, 1, 393228, 65536, 1, 327692, 65536, 1, 262156, 65536, 1, 196620, 131072, 6, 131084, 131072, 6, 65548, 131072, 6, 12, 65536, 1, 0, 65536, 1, 1, 65536, 1, 2, 65536, 1, 3, 65536, 1, 4, 65536, 1, 5, 65536, 1, 6, 65536, 1, 7, 65536, 1, 8, 65536, 1, 9, 65536, 1, 10, 65536, 1, 11, 65536, 1, 65536, 65536, 1, 131072, 65536, 1, 196608, 65536, 1, 262144, 65536, 1, 327680, 65536, 1, 393216, 65536, 1, 458752, 65536, 1, 524288, 65536, 1, 65537, 65536, 1, 131073, 65536, 1, 196609, 65536, 1, 262145, 65536, 1, 327681, 65536, 1, 393217, 65536, 1, 458753, 65536, 1, 458754, 65536, 1, 458755, 65536, 1, 458756, 65536, 1, 458757, 65536, 1, 458758, 65536, 1, 458759, 65536, 1, 458760, 65536, 1, 458761, 65536, 1, 458762, 65536, 1, 393226, 65536, 1, 393227, 131073, 4, 327691, 65536, 1, 262155, 65536, 1, 196619, 131072, 6, 65547, 131072, 6, 65546, 131072, 6, 65545, 131073, 4, 65544, 131073, 4, 65543, 131073, 4, 65542, 65536, 1, 65541, 65536, 1, 65540, 65536, 1, 65539, 65536, 1, 65538, 65536, 1, 131074, 65536, 1, 196610, 65536, 1, 262146, 65536, 1, 327682, 65536, 1, 393218, 65536, 1, 393219, 65536, 1, 393220, 65536, 1, 393221, 65536, 1, 393222, 65536, 1, 393223, 196608, 3, 393224, 262144, 3, 393225, 131073, 4, 458763, 65536, 1, 327690, 65536, 1, 327689, 65536, 1, 327688, 65536, 1, 327687, 65536, 1, 327686, 65536, 1, 327685, 65536, 1, 327684, 65536, 1, 262147, 65536, 1, 131075, 65536, 1, 131076, 65536, 1, 131077, 65536, 1, 131078, 65536, 1, 262153, 65536, 1, 262152, 65536, 1, 262151, 65536, 1, 262150, 65536, 1, 262149, 65536, 1, 262148, 65536, 1, 196611, 65536, 1, 196612, 65536, 1, 196613, 65536, 1, 196614, 65536, 1, 262154, 65536, 1, 327683, 65536, 1, 131081, 131073, 4, 196617, 131073, 4, 196618, 131072, 6, 131082, 131072, 6, 131083, 131072, 6, 131080, 131073, 4, 131079, 131073, 4, 196615, 131073, 4, 196616, 131073, 4)

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource("TileSet_5bsq7")
format = 2
layer_0/tile_data = PackedInt32Array(9, 65536, 0, 262154, 131073, 2, 262155, 65536, 6, 12, 65536, 0, 10, 65536, 0, 11, 65536, 0, 393225, 196608, 6, 524298, 196608, 6, 589835, 0, 7, 393227, 262144, 5, 327692, 65536, 2, 262149, 327680, 7, 65542, 0, 1, 327686, 0, 2, 131077, 0, 7, 196614, 0, 1, 393223, 196608, 5, 589829, 0, 7, 589833, 0, 7, 458763, 262144, 6, 327688, 262144, 2, 262151, 524289, 1, 262145, 262144, 6, 5, 262144, 6, 589824, 262144, 6, 7, 65536, 0, 262152, 65536, 6, 262153, 65536, 6, 327689, 65536, 2, 262156, 65536, 6, 327691, 262144, 2, 393228, 65536, 6, 8, 65536, 0, 131078, 0, 1, 262150, 0, 1, 6, 0, 0, 327687, 196608, 2, 327690, 196608, 2, 458761, 327681, 2, 524300, 65536, 1, 196613, 327681, 0, 65541, 65536, 1, 393222, 458753, 0, 393226, 196608, 5, 262148, 131072, 6, 458758, 327681, 2, 393224, 262144, 5, 65543, 196612, 0, 131079, 196612, 0, 196615, 196612, 0, 65544, 131076, 0, 131080, 131076, 0, 196616, 131076, 0, 65545, 262148, 1, 131081, 262148, 1, 196617, 262148, 1, 65546, 196609, 0, 131082, 196609, 1, 65547, 262145, 0, 131083, 262145, 1, 196619, 327681, 0)

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 200.0
offset_bottom = 150.0
texture = ExtResource("2_2ah1d")
expand_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 2.0
offset_right = 89.0
offset_bottom = 57.0
theme_override_styles/panel = SubResource("StyleBoxTexture_0wda0")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 5.0
offset_right = 97.0
offset_bottom = 55.0
scale = Vector2(1.04, 1.04)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -2
theme_override_fonts/font = ExtResource("2_wkp5o")
theme_override_font_sizes/font_size = 22
text = "Farm 
Code"

[node name="CuteCat1" type="AnimatedSprite2D" parent="."]
position = Vector2(14, 77)
rotation = 0.00666368
scale = Vector2(0.540161, 0.538417)
sprite_frames = SubResource("SpriteFrames_113h8")
autoplay = "default"
frame_progress = 0.892939

[node name="CuteCat2" type="AnimatedSprite2D" parent="."]
position = Vector2(178, 126)
rotation = -0.00584662
scale = Vector2(0.627881, 0.614671)
sprite_frames = SubResource("SpriteFrames_pjmpf")
autoplay = "default"
frame_progress = 0.619658

[node name="CutCat3" type="AnimatedSprite2D" parent="."]
position = Vector2(131, 126)
rotation = 0.00596986
scale = Vector2(0.66477, 0.570794)
sprite_frames = SubResource("SpriteFrames_q8rf0")
autoplay = "default"
frame_progress = 0.190967

[node name="CutCat4" type="AnimatedSprite2D" parent="."]
position = Vector2(77, 117)
rotation = 0.238729
scale = Vector2(0.533928, 0.438293)
sprite_frames = SubResource("SpriteFrames_u083v")
autoplay = "default"
frame_progress = 0.785213

[node name="StartButton" type="Button" parent="."]
layout_mode = 2
offset_left = 8.0
offset_top = 84.0
offset_right = 78.0
offset_bottom = 109.0
mouse_default_cursor_shape = 2
theme = ExtResource("4_2ene7")
theme_override_colors/font_color = Color(0.713726, 0.537255, 0.384314, 1)
theme_override_colors/font_pressed_color = Color(0.713726, 0.537255, 0.384314, 1)
theme_override_fonts/font = ExtResource("2_wkp5o")
theme_override_font_sizes/font_size = 11
text = "Start"

[node name="TutorialButton" type="Button" parent="."]
layout_mode = 2
offset_left = 8.0
offset_top = 122.0
offset_right = 78.0
offset_bottom = 147.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("4_2ene7")
theme_override_colors/font_color = Color(0.713726, 0.537255, 0.384314, 1)
theme_override_colors/font_pressed_color = Color(0.713726, 0.537255, 0.384314, 1)
theme_override_fonts/font = ExtResource("2_wkp5o")
theme_override_font_sizes/font_size = 11
text = "Tutorial
"

[node name="HistoryButton2" type="Button" parent="."]
layout_mode = 0
offset_left = 157.0
offset_top = 135.0
offset_right = 197.0
offset_bottom = 157.0
theme = ExtResource("12_xayvp")
theme_override_fonts/font = ExtResource("14_8kubc")
theme_override_font_sizes/font_size = 8
text = "História"

[node name="CreditButton" type="Button" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 135.0
offset_right = 154.0
offset_bottom = 156.0
focus_mode = 0
theme = ExtResource("12_xayvp")
theme_override_fonts/font = ExtResource("14_8kubc")
theme_override_font_sizes/font_size = 7
text = "Créditos
"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 182.0
offset_top = 1.0
offset_right = 198.0
offset_bottom = 16.0
focus_mode = 0
theme = ExtResource("14_mbv1l")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_gge73")

[connection signal="pressed" from="StartButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TutorialButton" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CreditButton" to="." method="_on_credit_button_pressed"]
